--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <section class="flex">
         <div class="item active democrat government yes-native">
           <a href="https://stringerformayor.com/">
-            <img src="images/Scott-Stringer.jpg" />
+            <img src="images/scott-stringer.jpg" />
             <h3>Scott Stringer, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> New York City, N.Y.
@@ -77,7 +77,7 @@
 
         <div class="item active democrat government yes-native">
           <a href="https://www.ericadams2021.com/">
-            <img src="images/Eric-Adams.jpg" />
+            <img src="images/eric-adams.jpg" />
             <h3>Eric Adams, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Brownsville, New York, N.Y.
@@ -88,7 +88,7 @@
 
         <div class="item active democrat government yes-native">
           <a href="https://mayawileyformayor.com/">
-            <img src="images/Maya-Wiley.jpg" />
+            <img src="images/maya-wiley.jpg" />
             <h3>Maya Wiley, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Syracuse, N.Y.
@@ -98,7 +98,7 @@
 
         <div class="item active democrat government yes-native">
           <a href="https://shaunfornyc.com/?utm_source=google&utm_medium=search&utm_campaign=tvad&gclid=Cj0KCQiA1pyCBhCtARIsAHaY_5eVya_vo2mRNVD11dNCZeKH3owJDV791p-sQTNH0MLwVektkDw4kTcaAm3BEALw_wcB">
-            <img src="images/Shaun-Donovan.jpg" />
+            <img src="images/shaun-donovan.jpg" />
             <h3>Shaun Donovan, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> New York City, N.Y.
@@ -108,7 +108,7 @@
 
         <div class="item active democrat government yes-native">
           <a href="https://www.kgfornyc.com/">
-            <img src="images/Kathryn-Garcia.jpg" />
+            <img src="images/kathryn-garcia.jpg" />
             <h3>Kathryn Garcia, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Brooklyn, N.Y.
@@ -118,7 +118,7 @@
 
         <div class="item active democrat finance no-native">
           <a href="https://www.rayformayor.com/">
-            <img src="images/Ray-McGuire.jpg" />
+            <img src="images/ray-mcguire.jpg" />
             <h3>Ray McGuire, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Dayton, O.H.
@@ -128,7 +128,7 @@
 
         <div class="item active democrat government no-native">
           <a href="https://loreeformayor.nyc/">
-            <img src="images/Loree-Sutton.jpg" />
+            <img src="images/loree-sutton.jpg" />
             <h3>Loree Sutton, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Loma Linda, C.A.
@@ -138,7 +138,7 @@
 
         <div class="item active democrat government no-native">
           <a href="https://www.carlos2021.com/">
-            <img src="images/Carlos-Menchaca.jpg" />
+            <img src="images/carlos-menchaca.jpg" />
             <h3>Carlos Menchaca, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> El Paso, T.X.
@@ -148,7 +148,7 @@
 
         <div class="item active democrat nonprofit yes-native">
           <a href="https://www.dianne.nyc/">
-            <img src="images/Dianne-Morales.jpg" />
+            <img src="images/dianne-morales.jpg" />
             <h3>Dianne Morales, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Brooklyn, N.Y.
@@ -158,7 +158,7 @@
 
         <div class="item active republican entertainment yes-native">
           <a href="http://guardianangels.org/">
-            <img src="images/Curtis-Sliwa.jpg" />
+            <img src="images/curtis-sliwa.jpg" />
             <h3>Curtis Sliwa, <span style="color:#FF0000;">R</span></h3>
             <p>
               <b>Born:</b> Brooklyn, N.Y.
@@ -168,7 +168,7 @@
 
         <div class="item active democrat business nonprofit yes-native">
           <a href="https://www.yangforny.com/">
-            <img src="images/Andrew-Yang.jpg" />
+            <img src="images/andrew-yang.jpg" />
             <h3>Andrew Yang, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Schenectady, N.Y.
@@ -178,7 +178,7 @@
 
         <div class="item active republican business entertainment yes-native">
           <a href="https://www.barbarakformayor.com/">
-            <img src="images/Barbara-Kavovit.jpg" />
+            <img src="images/barbara-kavovit.jpg" />
             <h3>Barbara Kavovit, <span style="color:#0015BC;">D</span></h3>
             <p>
               <b>Born:</b> Bronx, N.Y.
@@ -188,7 +188,7 @@
 
         <div class="item active republican business no-native">
           <a href="https://www.mateothemayor.com/">
-            <img src="images/Fernando-Mateo.jpg" />
+            <img src="images/fernando-mateo.jpg" />
             <h3>Fernando Mateo, <span style="color:#FF0000;">R</span></h3>
             <p>
               <b>Born:</b> The Dominican Republic
@@ -198,7 +198,7 @@
 
         <div class="item active republican finance no-native">
           <a href="https://www.saraformayor.com/">
-            <img src="images/Sara-Tirschwell.jpg" />
+            <img src="images/sara-tirschwell.jpg" />
             <h3>Sara Tirschwell, <span style="color:#FF0000;">R</span></h3>
             <p>
               <b>Born:</b> Corpus Christi, T.X.
