--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         </div>
 
-        <div class="item active democrat government yes-cityborn justice police housing climate covid health racial-justice income">
+        <div class="item active democrat government no-cityborn justice police housing climate covid health racial-justice income">
           <a href="https://mayawileyformayor.com/">
             <img src="images/maya-wiley.jpg" />
             <h3>Maya Wiley, <span style="color:#0015BC;">D</span></h3>
@@ -190,7 +190,7 @@
             <p>Curtis Sliwa, a radio talkshow host, founded the Guardian Angels, a crime-prevention group, in 1979.</p>
         </div>
 
-        <div class="item active democrat business nonprofit yes-citybor covid justice housing climate transportation income">
+        <div class="item active democrat business nonprofit no-cityborn covid justice housing climate transportation income">
           <a href="https://www.yangforny.com/">
             <img src="images/andrew-yang.jpg" />
             <h3>Andrew Yang, <span style="color:#0015BC;">D</span></h3>
